# Sandbox

./: .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
assets/shaders/: chunk.vert  skybox.frag  skybox.vert
client/: CMakeLists.txt
client/assets/models/: material.lib
client/assets/shaders/: chunk.frag  chunk.vert  entity.frag  entity.vert  skybox.frag  skybox.vert  text.frag  text.vert
client/assets/voxels/: textures.toml
client/libs/lodepng/: CMakeLists.txt
client/src/: client.cpp  client.h  host.h  main.cpp
client/src/client/: local.h  net.h
client/src/engine/: OBJ_Loader.h  button.h  context.h  gl.h  load.h  text.cpp  text.h  window.cpp  window.h
client/src/engine/graphics/: camera.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
client/src/world/: entity.cpp  entity.h  player.cpp  player.h  skybox.cpp  skybox.h  textures.h  voxel.cpp  voxel.h  world.cpp  world.h
client/src/world/chunk/: mesh.cpp  mesh.h  mesher.h  renderer.cpp  renderer.h  voxmesh.h
client/src/world/chunk/mesh/: mesh.cpp  mesh.h  mesher.cpp  mesher.h
client/src/world/skybox/: skybox.cpp  skybox.h
game/: CMakeLists.txt
game/assets/: voxels.toml
game/libs/FastNoiseLite/: CMakeLists.txt
game/sandbox/: host.h  packet.h  server.h  util.h
game/sandbox/server/: host.h  packet.cpp  packet.h  player.h  server.h
game/sandbox/util/: buf.cpp  buf.h  queue.h
game/sandbox/world/: chunk.cpp  chunk.h  player.cpp  player.h  voxel.cpp  voxel.h  world.cpp  world.h
game/sandbox/world/voxel/: registry.cpp  registry.h
libs/: FastNoiseLite.cpp
server/: CMakeLists.txt
server/src/: host.h  main.cpp
src/: main.cpp  skybox.h  util.h
src/client/: world.h
src/client/world/: textures.h
src/client/world/chunk/: mesh.cpp  mesh.h  mesher.h  renderer.h  voxmesh.h
src/engine/: context.h  graphics.hpp  state.h  window.cpp  window.h  window.hpp
src/engine/graphics/: camera.cpp  camera.h  camera.hpp  shader.cpp  shader.h  shader.hpp  texture.h
src/world/: chunk.h  player.h  world.h
src/world/voxel/: face.h
